-0.2.1
Add option to change port number in /config, and persist in Redis, surviving updates.

-0.2.0
New installation procedure to fix many of the initial installation issues with 0.1.9 and earlier.
Reduce memory consumption by 10-20mb.
Include the majority of dependencies with the editor archive.
New startup and process monitor procedure.
Run as 'webide' user to isolate from 'pi' user, 'webide' has similar permissions as 'pi' for GPIO and I2C.
Add 'webide' to I2C group
Default to run as sudo for now.
Add /config page to change hostname and basic wifi.
Use port 80 instead of 3000 as the default.
Add new error and exception logging to help troubleshoot.
Give focus back to the editor when closing the terminal.
Add confirmation to prevent accidental navigation away from the editor.
Fix context menu so that it displays properly in firefox.
Add notification of activity while creating files and folders.
Update documentation for new features.

-0.1.9
Fix for Editor dependency changes causing server startup failure for new installations.
Set Hostname on each request, to allow access from internal or external IP's without restarting.

-0.1.8
Fix for the error with deserializing the session after restarting the server.
Remove pre-populated values from /setup as that path isn't authenticated.
Move update location of editor archive to github downloads.

-0.1.7
Automate setting of hostname using req.headers.host.
Add port to config file.
Add git as a dependency for installation.

-0.1.6
Perform more validations in the /setup page to ensure all the parameters are sent.

-0.1.5
Fix for /setup using wrong parm full_name instead of name.

-0.1.4
Minor fix of cloning repositories
Test of new update functionality

-0.1.3
Add Offline Mode.
Update Logo to add Alpha.
Add release information directly to repository

-0.1.2
Allow file uploads in project folders.
Open images in an overlay, instead of the editor.